--- a/LAB1/Palavra_Passe.html
+++ b/LAB1/Palavra_Passe.html
@@ -59,7 +59,8 @@
 
 
     <div class="Recuperação de Password">
-    
+
+    <a href="Lab1.html"><img src="ipvc2.jpg" alt="IPVC" width="50%" class="center"></a>
     <h2> Recuperar Palavra Passe</h2>
     <p> Introduza o seu email para recuperar a sua palavra passe</p>
     <form action="Lab1.html">
