--- a/LAB1/Lab1.html
+++ b/LAB1/Lab1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="Lab1" href="Lab1.css">
+    <link rel="Style.css" href="Style.css">
     <style>
 
         .center {
@@ -23,6 +24,9 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            background-image: url("css\ imagem\ fundo.jpg");
+            background-size: cover;
+            background-position: right top;
         }
         form {
             background-color: #fff;
@@ -68,7 +72,7 @@
         <input type="submit" value="Login">
          
         <div class="option">
-        <a href="Palavra_Passe.html" > Recuperar Senha?</a> | <a href="Registar.html">Registar</a>
+        <a href="Palavra_Passe.html" > Recuperar Senha</a> | <a href="Registar.html">Registar</a>
         </div>
 
 
