--- a/LAB1/Lab1.html
+++ b/LAB1/Lab1.html
@@ -64,6 +64,7 @@
     </style>
 </head>
 <body>
+
     <form>
         <a href="Lab1.html"><img src="ipvc1.jpeg" alt="IPVC" width="50%" class="center"></a>
         <h2>Login</h2>
@@ -77,5 +78,18 @@
 
 
     </form>
+
 </body>
+
+<head>
+    <link rel="stylesheet" href="Style.css">
+  </head>
+
+
+<footer>
+    <p>&copy; 2021 - Instituto Politécnico de Viana do Castelo</p>
+    <a href="https://www.facebook.com/ipvc.pt"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://twitter.com/ipvc_pt"><i class="fab fa-twitter"></i></a>
+  </footer>
+  
 </html>
