update palavra passe

--- a/LAB1/Palavra_Passe.html
+++ b/LAB1/Palavra_Passe.html
@@ -72,7 +72,7 @@
     <a href="Lab1.html"><img src="ipvc2.jpg" alt="IPVC" width="25%" class="center" ></a>
 </h1>
     <h2> Recuperar Palavra Passe</h2>
-    <p> Introduza o seu email para recuperar a sua palavra passe</p>
+    <p> Introduza o seu email de recuperação</p>
     <form action="Lab1.html">
         <input type="text" id="email" name="email" placeholder="Email" required>
         <input type="submit" value="Recuperar">
