--- a/LAB 2/Login.html
+++ b/LAB 2/Login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="Lab1" href="Lab1.css">
     <link rel="Style.css" href="Style.css">
     <style>
 
@@ -66,8 +65,7 @@
 <body>
 
     <form>
-        <a href="Lab1.html"><img src="ipvc1.jpeg" alt="IPVC" width="50%" class="center"></a>
-        <h2>Login</h2>
+        <a href="Login.html"><img src="Login.jpeg" alt="Login" width="50%" class="center"></a>
         <input type="text" id="Nome de utilizador" name="Nome de utilizador" placeholder="Nome de utilizador" required>
         <input type="text" id="Palavra Passe" name="Palavra Passe" placeholder="Palavra Passe" required>
         <input type="submit" value="Login">
@@ -81,15 +79,8 @@
 
 </body>
 
-<head>
-    <link rel="stylesheet" href="Style.css">
-  </head>
-
-
 <footer>
-    <p>&copy; 2021 - Instituto Politécnico de Viana do Castelo</p>
-    <a href="https://www.facebook.com/ipvc.pt"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://twitter.com/ipvc_pt"><i class="fab fa-twitter"></i></a>
+    <p>&copy; Copyright 2024 - All rights reserved by Mcqueen</p>
   </footer>
   
 </html>
