--- a/LAB 2/Menu.html
+++ b/LAB 2/Menu.html
@@ -51,7 +51,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="profile-image">
-                <img src="Mcqueen.jpg" alt="Imagem de perfil" style="width: 150px; height: 150px;">
+                <img src="Mcqueen.jpg"  class = "img-thumbnail" alt="Imagem de perfil" style="width: 150px; height: 150px;">
             </div>
 
             <h3 class="text-center">Olá Mcqueen</h3>
