--- a/LAB 2/Login.html
+++ b/LAB 2/Login.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="Style.css" href="Style.css">
     <style>
 
         .center {
             display: block;
             margin-left: auto;
             margin-right: auto;
+        }
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: transparent;
+            color: white;
+            text-align: center;
+            padding: 10px;
         }
 
 
@@ -23,7 +32,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url("css\ imagem\ fundo.jpg");
+            background-image: url("fundo.jpg");
             background-size: cover;
             background-position: right top;
         }
@@ -42,15 +51,17 @@
             border-radius: 3px;
             box-sizing: border-box;
         }
+        
         input[type="submit"] {
             width: 100%;
-            background-color: #007bff;
+            background: linear-gradient(to right, #0000ff, #00008b); /* Gradiente de azul para azul escuro */
             color: #fff;
             border: none;
             padding: 10px;
             border-radius: 3px;
             cursor: pointer;
         }
+
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
@@ -64,17 +75,11 @@
 </head>
 <body>
 
-    <form>
-        <a href="Login.html"><img src="Login.jpeg" alt="Login" width="50%" class="center"></a>
-        <input type="text" id="Nome de utilizador" name="Nome de utilizador" placeholder="Nome de utilizador" required>
-        <input type="text" id="Palavra Passe" name="Palavra Passe" placeholder="Palavra Passe" required>
+    <form action="Menu.html">
+        <a href="Login.png"><img src="Login.png" alt="Login" width="50%" class="center"></a>
+        <input type="text" id="Username" name="Username" placeholder="Username" required>
+        <input type="Password" id="Password" name="Password" placeholder="Password" required>
         <input type="submit" value="Login">
-         
-        <div class="option">
-        <a href="Palavra_Passe.html" > Recuperar Senha</a> | <a href="Registar.html">Registar</a>
-        </div>
-
-
     </form>
 
 </body>
