--- a/LAB 2/Login.html
+++ b/LAB 2/Login.html
@@ -85,7 +85,7 @@
 </body>
 
 <footer>
-    <p>&copy; Copyright 2024 - All rights reserved by Mcqueen</p>
+    <p>&copy; Copyright 2024 - All rights reserved by TaskHelp</p>
   </footer>
   
 </html>
